# nbody-wasm

./: CMakeLists.txt  LICENSE  README.md  bhtree.cpp  bhtree.h  body.cpp  body.h  index.html  main-wasm.cpp  main.cpp  quad.cpp  quad.h
demo/: index.html  index.js  nbody_wasm.js  nbody_wasm.wasm  simulation.js
